@@ -2,6 +2,10 @@ pypet 0.1b.4
 
 *   Annotations and Results now support __setitem__, which is analogue to `f_get` and `f_set`
 
+*   Group Nodes can now contain comments as well
+
+*   Comments are only stored to HDF5 if they are not the empty string
+
 
 pypet 0.1b.3
 
